# rsavesync

./: .gitignore  default-game-settings.json  default-settings.json  go.mod  main.go  pyproject.toml
exec/: exec.go
logger/: logger.go
parse/: parse.go
scripts/: install.sh
src/rsavesync/cli/: __main__.py
src/rsavesync/lib/: constants.py  log_factory.py
tests/: test.json
