[project]
name = "rsavesync"
version = "0.0.1"
authors = [
    { name = "Carlos Chulo" }
]
description = "Successor to gamesync. Add cloud save support for unsupported steam and non-steam games!"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    "pyinstaller == 6.4.0",
    "jsonschema == 4.22.0",
]

[project.entry-points."console_scripts"]
cli-name = "rsavesync.cli.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rsavesync*"]
